--- a/app/src/main/res/layout/activity_over.xml
+++ b/app/src/main/res/layout/activity_over.xml
@@ -1,9 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.OverActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1.75"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/over_winner_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/game_winner_player_draw"
+            android:textSize="@dimen/menu_title"
+            android:textStyle="bold"
+            android:layout_marginTop="100dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1.75"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/menu_option_play_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/game_option_play_again"
+            android:textSize="@dimen/menu_option"
+            android:textStyle="bold"
+            android:onClick="onClick"
+            android:clickable="true"/>
+    </LinearLayout>
+</LinearLayout>
